[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ophyd_devices"
version = "0.30.0"
description = "Custom device implementations based on the ophyd hardware abstraction layer"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "ophyd~=1.9",
    "typeguard",
    "prettytable",
    "bec_lib",
    "numpy",
    "pyyaml",
    "std_daq_client",
    "pyepics",
    "pytest",
    "h5py",
    "hdf5plugin",
]

[project.optional-dependencies]
dev = ["black", "isort", "coverage", "pylint", "pytest", "pytest-random-order"]

[project.scripts]
ophyd_test = "ophyd_devices:launch"

[project.urls]
"Bug Tracker" = "https://gitlab.psi.ch/bec/ophyd_devices/issues"
Homepage = "https://gitlab.psi.ch/bec/ophyd_devices"

[tool.hatch.build.targets.wheel]
include = ["*"]

[tool.black]
line-length = 100
skip-magic-trailing-comma = true
